--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.2",
+    "dom-to-image": "^2.6.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.22.3"
+    "react-router-dom": "6.22.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
