--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
-  "name": "inschrijven-standalone",
-  "version": "0.0.1",
+  "name": "workingpoint-landing-form",
+  "version": "0.0.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,7 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
