--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "nodemailer": "^6.9.13"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
